--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,15 @@
-shaders
-	black and white
-	subtractive channels
-controls
-	gravity
-	good platformer juice (jump slightly after falling)
-	detect when on ground (downward velocity, stopped)
-	
+things you can buy
+	ads
+	music
+	sounds
+shop
+	unlocking system
+fix various special tiles
+middle room
+ads
+
+
+
+particle affects
+	money
+	died on spikes
